--- a/src/index.css
+++ b/src/index.css
@@ -1,350 +1,502 @@
 html {
-  box-sizing: border-box;
-  font-size: 62.5%;
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
+
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
+
 a {
-  text-decoration: none;
-  color: #000;
+    text-decoration: none;
+    color: #000;
 }
 
 body {
-  font-family: 'Outfit', sans-serif;
-  font-size: 1.6rem;
-  line-height: 2;
+    font-family: 'Outfit', sans-serif;
+    font-size: 1.6rem;
+    line-height: 2;
 }
+
 h1,
 h2,
 h3 {
-  margin: 0 0 5rem 0;
+    margin: 0 0 2rem 0;
 
 }
 
 img {
-  max-width: 100%;
-  display: block;
+    max-width: 100%;
+    display: block;
 }
 
 
 .btn {
-  background-color: #8CBC00;
-  display: block;
-  color: #FFF;
-  text-transform: uppercase;
-  font-weight: 900;
-  padding: 1rem;
-  border-radius: 1rem;
-  transition: all 0.3s ease-in-out;
-  text-align: center;
-  border: none;
-  cursor: pointer;
+    background-color: #8CBC00;
+    display: block;
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 900;
+    padding: 2rem;
+    border-radius: 1rem;
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    width: 90%;
+    margin: 0 auto;
 }
 .btn:hover {
-  background-color: #80aa03;
+    background-color: #80aa03;
+}
+@media (min-width: 768px) {
+    .btn {
+        width: auto;
+        padding: 1rem;
+        margin: 0;
+    }
 }
 
+
 .text-center {
-  text-align: center;
+    text-align: center;
 }
-.max-width-30 {
-  width: 30rem;
+
+@media (min-width: 768px) {
+    .max-width-30 {
+        width: 30rem;
+    }
 }
 
 .nombre-sitio {
-  color: #000;
-  text-align: center;
-  font-size: 4rem;
-  margin-top: 5rem;
+    color: #000;
+    text-align: center;
+    font-size: 4rem;
+    margin-top: 5rem;
 }
 
 .nombre-sitio span {
-  color: #037bc0;
+    color: #037bc0;
 }
 
 .nav-principal {
-  padding: 2rem 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: .5rem;
 }
+
+@media (min-width: 768px) {
+    .nav-principal {
+        justify-content: space-around;
+        flex-direction: row;
+    }
+}
+
 .nav-principal a {
-  transition: all 0.3s ease-in-out;
-  padding: .5rem;
+    transition: all 0.3s ease-in-out;
+    padding: .5rem;
 }
+
 .nav-principal a:hover {
-  color: #FFF;
-  background-color: #037bc0;
-  border-radius: .5rem;
+    color: #FFF;
+    background-color: #037bc0;
+    border-radius: .5rem;
 }
+
 .active {
-  color: #FFF;
-  background-color: #037bc0;
-  border-radius: .5rem;
+    color: #FFF;
+    background-color: #037bc0;
+    border-radius: .5rem;
 }
 
 .contenedor {
-  max-width: 120rem;
-  margin: 0 auto;
+    max-width: 120rem;
+    margin: 0 auto;
 }
 
 .contenedor-nav {
-  border-top: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
 }
 
 .hero {
-  background-image: url("../public//assets/images/principal.jpg");
-  background-position: center;
-  background-size: cover;
-  height: 55rem;
+    background-image: url("public/assets/images/principal.jpg");
+    background-position: center;
+    background-size: cover;
+    height: 25rem;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        height: 55rem;
+    }
 }
 
 .categorias {
-  padding-top: 5rem;
+    padding: 5rem 0;
 }
 
 .categorias h2 {
-  text-align: center;
+    text-align: center;
 }
 
-.listado-categorias {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+.categoria {
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .categoria {
+        margin-bottom: 0;
+    }
+}
+
+.categoria img {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .listado-categorias {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
 
 .categoria a {
-  display: block;
-  text-align: center;
-  padding: 2rem;
-  font-size: 2rem;
-  transition: all 0.3s ease-in-out;
+    display: block;
+    text-align: center;
+    padding: 2rem;
+    font-size: 2rem;
+    transition: all 0.3s ease-in-out;
 }
 
 .categoria a:hover {
-  background-color: #037bc0;
-  color: #fff;
-  border-bottom-right-radius: 2rem;
+    background-color: #037bc0;
+    color: #fff;
+    border-bottom-right-radius: 2rem;
 }
 
 /* Nosotros */
 .sobre-nosotros {
-  margin-top: 8rem;
-  background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100%), url('/assets/images/nosotros.jpg');
-  background-position: left center;
-  padding: 10rem 0;
-  background-repeat: no-repeat;
-  background-size: 100%, 120rem;
+    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100%), url('public/assets/images/nosotros.jpg');
+    background-position: center, top left;
+    background-repeat: no-repeat;
+    background-size: 100%, 70rem;
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        background-image: linear-gradient(to right, transparent 50%, #037bc0 50%, #037bc0 100%), url('public/assets/images/nosotros.jpg');
+        background-position: left center;
+        padding: 10rem 0;
+        background-size: 100%, 160rem;
+    }
 }
 
 .sobre-nosotros-grid {
-  display: flex;
-  justify-content: flex-end;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros-grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: unset;
+        column-gap: 10rem;
+    }
 }
 
 .texto-nosotros {
-  flex-basis: 50%;
-  padding-left: 8rem;
-  color: #FFF;
+    grid-row: 2/3;
+    color: #FFF;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) {
+    .texto-nosotros {
+        grid-column: 2/3;
+    }
 }
 
 /*Listado productos*/
 .contenido-principal {
-  padding-top: 5rem;
-}
-
-.producto {
-  background-color: #037bc0;
+    padding-top: 5rem;
 }
 
 .info-producto {
-  text-align: center;
-  color: #FFF;
-  padding: 2rem;
+    text-align: center;
+    color: #FFF;
+    padding: 1rem;
 }
+
 .info-producto h3 {
-  margin: 0;
-  font-size: 3rem;
+    margin: 0;
+    font-size: 3rem;
 }
+
 .info-producto p {
-  margin: 0 0 .5rem 0;
+    margin: 0 0 .5rem 0;
 }
+
 .info-producto .precio {
-  font-size: 2.8rem;
-  font-weight: 900;
+    font-size: 2.8rem;
+    font-weight: 900;
 }
 
-.listado-productos {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 2rem;
+@media (min-width: 768px) {
+    .listado-productos {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 2rem;
+    }
+
+    .producto:nth-child(1) {
+        grid-column: 1 / 7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+
+    .producto:nth-child(1) img {
+        height: 43rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .producto:nth-child(2) {
+        grid-column: 1 / 4;
+    }
+
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img {
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .producto:nth-child(3) {
+        grid-column: 4 / 7;
+    }
+
+    .producto:nth-child(4) {
+        grid-column: 1 / 3;
+    }
+
+    .producto:nth-child(5) {
+        grid-column: 3 / 5;
+    }
+
+    .producto:nth-child(6) {
+        grid-column: 5 / 7;
+    }
 }
 
-.producto:nth-child(1) {
-  grid-column: 1 / 7;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-}
-.producto:nth-child(1) img {
-  height: 43rem;
-  width: 100%;
-  object-fit: cover;
-}
-.producto:nth-child(2) {
-  grid-column: 1 / 4;
-}
-.producto:nth-child(2) img, .producto:nth-child(3) img {
-  height: 30rem;
-  width: 100%;
-  object-fit: cover;
-}
-.producto:nth-child(3) {
-  grid-column: 4 / 7;
+.producto {
+    background-color: #037bc0;
+    margin-bottom: 2rem;
 }
 
-.producto:nth-child(4) {
-  grid-column: 1 / 3;
-}
-.producto:nth-child(5) {
-  grid-column: 3 / 5;
-}
-.producto:nth-child(6) {
-  grid-column: 5 / 7;
+@media (min-width: 768px) {
+    .producto {
+        margin: 0;
+    }
 }
 
+.producto:last-of-type {
+    margin-bottom: 0;
+}
+
+/*footer*/
 .site-footer h3 {
-  margin-bottom: .5rem;
-}
-.site-footer {
-  margin-top: 5rem;
-  border-top: 1px solid #e1e1e1;
-  padding-top: 5rem;
+    margin-bottom: .5rem;
+    text-align: center;
 }
 
-.grid-footer {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-  text-align: center;
+.site-footer {
+    margin-top: 5rem;
+    border-top: 1px solid #e1e1e1;
+    padding-top: 5rem;
+}
+
+@media (min-width: 768px) {
+    .grid-footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+        text-align: center;
+    }
+}
+
+.grid-footer > div {
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .grid-footer > div {
+        margin: 0;
+    }
 }
 
 .footer-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .footer-menu a {
-  width: max-content;
+    width: max-content;
 }
 
 .copy {
-  margin-top: 5rem;
-  text-align: center;
+    margin-top: 5rem;
+    text-align: center;
 }
 
 .contenido-nosotros {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  gap: 4rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 4rem;
 }
 
 .info-nosotros {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) {
+    .info-nosotros {
+        padding: 0;
+    }
 }
 
 /* Blog */
-.contenedor-blog {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 4rem;
-}
-.entrada {
-  border-bottom: 1px solid #e1e1e1;
-  padding-bottom: 4rem;
-  margin-bottom: 2rem;
-}
-.entrada:last-child {
-  border-bottom: none;
-}
-.entrada-meta {
-  display: flex;
-  justify-content: space-between;
-}
-.entrada-meta p {
-  font-weight: 700;
-}
-.entrada-meta span {
-  color: #037bc0;
+@media (min-width: 768px) {
+    .contenedor-blog {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 4rem;
+    }
 }
 
-.contenido-entrada-blog {
-  width: 60rem;
-  margin: 0 auto;
+.entrada {
+    border-bottom: 1px solid #e1e1e1;
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
 }
+
+.entrada h2 {
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .entrada h2 {
+        text-align: left;
+    }
+}
+
+.entrada:last-child {
+    border-bottom: none;
+}
+
+@media (min-width: 768px) {
+    .entrada-meta {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.contenedor-blog-central {
+    padding: 2rem;
+}
+
+.entrada-meta p {
+    font-weight: 700;
+}
+
+.entrada-meta span {
+    color: #037bc0;
+}
+
+@media (min-width: 768px) {
+    .contenido-entrada-blog {
+        width: 60rem;
+        margin: 0 auto;
+    }
+}
+
+/*galeria*/
 .galeria {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
+    list-style: none;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 2rem;
+    padding: 2rem;
 }
+
+@media (min-width: 768px) {
+    .galeria {
+        grid-template-columns: repeat(3, 1fr);
+        padding: 0;
+    }
+    .galeria img:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+}
+
 .galeria img {
-  width: 100%;
-  height: 30rem;
-  object-fit: cover;
-  transition: all 0.3s ease-in-out;
-  border-radius: 1rem;
-}
-.galeria img:hover {
-  cursor: pointer;
-  transform: scale(1.1);
+    width: 100%;
+    height: 30rem;
+    object-fit: cover;
+    transition: all 0.3s ease-in-out;
+    border-radius: 1rem;
 }
 
 /* Formulario */
 .formulario {
-  max-width: 60rem;
-  margin: 0 auto;
+    max-width: 60rem;
+    margin: 0 auto;
 }
+
 .formulario fieldset {
-  border: 1px solid #e1e1e1;
-  padding: 2rem;
-  margin-bottom: 2rem;
+    border: 1px solid #e1e1e1;
+    padding: 2rem;
+    margin-bottom: 2rem;
 }
+
 .formulario legend {
-  background-color: #036eac;
-  color: #FFF;
-  font-size: 2rem;
-  width: 100%;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 900;
-  margin-bottom: 4rem;
+    background-color: #036eac;
+    color: #FFF;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin-bottom: 4rem;
 }
 
 .campo {
-  display: flex;
-  margin-bottom: 2rem;
-  align-items: center;
+    display: flex;
+    margin-bottom: 2rem;
+    align-items: center;
 }
+
 .campo label {
-  flex-basis: 10rem;
-  font-weight: 700;
+    flex-basis: 10rem;
+    font-weight: 700;
 }
+
 .campo input[type="text"], .campo input[type="email"], .campo textarea,
 .campo select, .campo input[type="tel"], .input-datalist {
-  flex: 1;
-  padding: 1rem;
-  border: 1px solid #e1e1e1;
-  outline: none;
-  border-radius: 1rem;
-  resize: none;
+    flex: 1;
+    padding: 1rem;
+    border: 1px solid #e1e1e1;
+    outline: none;
+    border-radius: 1rem;
+    resize: none;
 }
